--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -62,7 +62,10 @@
               <span th:text="${session.administratorName + 'さん'}"
                 >山田さん</span
               >こんにちは！ &nbsp;&nbsp;&nbsp;
-              <a href="../administrator/login.html" class="navbar-link"
+              <a
+                href="../administrator/login.html"
+                class="navbar-link"
+                th:href="@{/logout}"
                 >ログアウト</a
               >
             </p>
@@ -110,7 +113,7 @@
                     <td>
                       <img
                         src="../../static/img/e2.png"
-                        th:src="@{employee.image}"
+                        th:src="@{${employee.image}}"
                       />
                     </td>
                   </tr>
