--- a/src/main/resources/templates/administrator/login.html
+++ b/src/main/resources/templates/administrator/login.html
@@ -55,6 +55,7 @@
                   </div>
                 </div>
                 <div class="form-group">
+                  <span th:errors="*{mailAddress}"></span><br />
                   <label for="mailAddress">メールアドレス:</label>
                   <input
                     type="text"
@@ -66,6 +67,7 @@
                   />
                 </div>
                 <div class="form-group">
+                  <span th:errors="*{password}"></span><br />
                   <label for="inputPassword">パスワード:</label>
                   <input
                     type="password"
